ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity7/input.ts.stderr
error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity7/input.ts:1:6
  |
1 | 1 >> > 2;
  |      ^

error[1005]: Expected a semicolon
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity7/input.ts:1:6
  |
1 | 1 >> > 2;
  |      ^

